fixes from isaac's email
Some low-hanging fruit we might be able to fix prior to final submission, if you have time (and only if):
* load a panel when you first have added blogs to the app, like the first comments item in the list
* if a panel is empty, show a message
* open keyboard if you tap to reply to a comment
* connectivity error messages and help screen doesn't look like they use the default dialog styling (white box looks awkward) - simple fix?

git-svn-id: https://webos.svn.wordpress.org/trunk@286 ee5cff3a-74c1-40a4-9fec-33ab0844ee87

--- a/wordpress.application/css/WordPress.css
+++ b/wordpress.application/css/WordPress.css
@@ -493,11 +493,12 @@ img {
 
 /* Toolbar */
 
-.enyo-toolbar {
-	border-top: 1px solid #fff;
-	background: rgba(0,0,0,1) -webkit-gradient(linear, 0% 100%, 0% 0%, from(rgba(255,255,255,.85)), to(rgba(255,255,255,1)));
+/*.enyo-toolbar {
+  border-top: 1px solid #fff;
+  background-color: #EEE;
+  background: rgba(0,0,0,1) -webkit-gradient(linear, 0% 100%, 0% 0%, from(rgba(255,255,255,.85)), to(rgba(255,255,255,1)));
 }
-
+*/
 /* Comments detail view */
 
 /* Default with margin to avoid fat fingers */
